compiler/testData/asJava/lightClasses/compilationErrors/TwoOverrides.fir.java
public final class TwoOverrides /* TwoOverrides*/ implements kotlin.collections.Iterable<java.lang.String> {
  @org.jetbrains.annotations.Nullable()
  public java.lang.Void iterator();//  iterator()

  @org.jetbrains.annotations.Nullable()
  public java.lang.Void iterator();//  iterator()

  public  TwoOverrides();//  .ctor()

}
